# diald

./: BUGS  CHANGES  LICENSE  Makefile  Makefile.in  NOTES  NOTES.budget  README  README.ethertap  README.masq  README.pam  README.tun  TODO  TODO.budget  access.c  access.h  buffer.c  bufio.c  bufio.h  config.h  config.h.in  configure  configure.in  dev.c  diald.c  diald.h  diald.spec  filter.c  firewall.c  firewall.h  fixwrappers  fsm.c  fsm.h  lock.c  log.c  modem.c  netlink.h  options.c  parse.c  ppp.c  (+15 more)
config/: auth.eg  auth.pam  connect  diald.defs  diald.pam  disconnect  dynamic.filter  services  standard.filter
config/device/: dhcp.hangup  isdn
config/device/modem/: generic
config/login/: demon
contrib/isdn4linux/etc/: README
contrib/logger/: diald.monthly
doc/: dctrl.man  diald-control.man  diald-examples.man  diald-monitor.man  diald.man
setup/: README
setup/etc/: ippp.conf
setup/etc/diald/: device.conf
setup/etc/diald/demon/: config  config.eg  link
setup/etc/diald/roan/: auth  config  config.eg  link
setup/etc/init.d/: diald  ippp
setup/usr/share/diald/: connect  dhcp  disconnect  isdn.hangup
setup/usr/share/diald/filter/: dynamic  standard
setup/usr/share/diald/login/: shell-generic
