dnl Process this file with autoconf to produce a configure script.
AC_INIT(diald.c)
AC_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S

dnl Checks for libraries.
AC_CHECK_LIB(dl, dlsym)
AC_CHECK_LIB(nsl, nis_add)
AC_CHECK_LIB(pam, pam_start)
AC_CHECK_LIB(wrap, request_init)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h sys/ioctl.h sys/time.h syslog.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

dnl Checks for library functions.
AC_FUNC_GETPGRP
AC_FUNC_MEMCMP
AC_FUNC_SETPGRP
AC_FUNC_STRFTIME
AC_CHECK_FUNCS(select socket strcspn strdup strtol strtoul)

AC_OUTPUT(Makefile)
